k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-backend
  labels:
    app: confluence-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence-backend
  template:
    metadata:
      labels:
        app: confluence-backend
    spec:
      containers:
        - name: backend
          image: confluence-rag-chatbot-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10   # wait before first probe
            periodSeconds: 10         # check every 10s
            timeoutSeconds: 5
            failureThreshold: 5       # retry 5 times before restarting

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          # resources:
          #   requests:
          #     cpu: "250m"
          #     memory: "512Mi"
          #   limits:
          #     cpu: "1"
          #     memory: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: confluence-backend
spec:
  selector:
    app: confluence-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
